created all pages: about and project pages, copy is complete, need to ref images and convert them to jpg

--- a/src/styles/projects/Specialized.scss
+++ b/src/styles/projects/Specialized.scss
@@ -45,14 +45,14 @@
     .Specialized-Responsive3 {
         background: url('../../assets/images/specialized/Specialized-Responsive3.jpg');
         background-position: top;
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
     }
 
     .Specialized-Responsive4 {
         background: url('../../assets/images/specialized/Specialized-Responsive4Big.jpg');
         background-position: top;
-        background-size: cover;
+        background-size: contain;
         background-repeat: no-repeat;
     }
 
