--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -6,11 +6,12 @@
 
 html, body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     font-family: 'Montserrat', sans-serif;
     color: rgb(239, 239, 239);
     background-color: #141414;
     position: relative;
+    overflow-x: hidden;
 }
 
 h1 {
@@ -59,7 +60,7 @@ a {
             position: fixed;
             top: 0;
             right: 0;
-            padding-right: 40px;
+            padding-right: 60px;
             display: flex;
             justify-content: flex-end;
             align-items: center;
@@ -131,7 +132,6 @@ a {
         @media screen and (max-width: 650px){
             .Nav {
                 padding-right: 35px;
-                
             }
 
             .ProjectNav {
@@ -173,11 +173,6 @@ a {
                 justify-content: flex-start;
                 align-items: center;
             }
-
-                .FooterProject {
-                    // position: relative;
-                    // padding-left: 0;
-                }
 
                 .FooterText {
                     color: #141414;
@@ -224,7 +219,7 @@ a {
                     font-size: 12px;
                 }
                 #FooterText2 {
-                        margin-left: 0;
+                    margin-left: 0;
                 }
                 #FooterText1 {
                     margin-left: 0;
