--- a/src/styles/projects/main-projects.scss
+++ b/src/styles/projects/main-projects.scss
@@ -51,8 +51,11 @@
                 }
 
                 .Project-Intro-Slide1 {
-                    background-color: #8dcdd5;
+                    background-color: rgb(240, 240, 240);
                 }
+                // .Project-Intro-Slide1 {
+                //     background-color: #8dcdd5;
+                // }
                 .Project-Intro-Slide2 {
                     background-color: #141414;
                     display: flex;
