--- a/src/styles/about/about.scss
+++ b/src/styles/about/about.scss
@@ -1,3 +1,41 @@
+//IntroCover 
+        .About-Intro {
+            width: 100%;
+            height: 100vh;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            // opacity: 0;
+            z-index: 600;
+        }
+            .About-Intro-Wrap {
+                width: 100%;
+                height: 100%;
+                position: relative;
+            }  
+
+                .About-IntroSlide {
+                    position: absolute;
+                    width: 50%;
+                    height: 100%;
+                    top: 0;
+                    bottom: 0;
+                    background-color: rgb(240, 240, 240);
+                    transition: all;
+                    z-index: 1;
+                }
+                    .About-IntroSlideLeft {
+                        left: -100%;
+                    }
+
+                    .About-IntroSlideRight {
+                        right: -100%;
+                    }
+
+
+
 
 .About {
     width: 100%;
