--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -13,7 +13,7 @@ html, body {
     position: relative;
     display: flex;
     justify-content: center;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
     .BgLight {
@@ -42,7 +42,8 @@ a {
     height: 100%;
     position: relative;
     background-color: transparent;
-    opacity: 0;
+    overflow-x: hidden;
+    // opacity: 0;
 }
 
 .ScrollBar {
@@ -156,11 +157,13 @@ a {
     opacity: 0;
     z-index: 550;
     display: none;
+    justify-content: center;
     transition: all;
 }
 
     .Nav-Wrap {
         width: 100%;
+        max-width: 1920px;
         height: 100%;
         padding: 0 10%;
         position: relative;
@@ -303,6 +306,17 @@ a {
                     font-weight: 300;
                 }
 
+        .Nav-Projects-Close {
+            position: absolute;
+            left: 50%;
+            top: 10%;
+            font-size: 12px;
+            display: none;
+            opacity: 0;
+            transition: all;
+            cursor: pointer;
+        }
+
         .Nav-Projects-List {
             position: absolute;
             top: 150px;
@@ -323,6 +337,7 @@ a {
                     font-weight: 900;
                     font-style: normal;
                     text-transform: uppercase;
+                    white-space: nowrap;
                     transition: all;
                 }
 
@@ -330,6 +345,7 @@ a {
                         font-size: 12px;
                         text-transform: uppercase;
                         font-weight: 300;
+                        white-space: nowrap;
                         margin-top: -10px;
                         padding-left: 2px;
                     }
@@ -395,12 +411,16 @@ a {
     
 }
 
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1100px){
     .Nav-Info {
         display: none;
     }
     .Nav-Divide-Line {
         display: none;
+    }
+    .Nav-Projects-Close {
+        left: 10%;
+        top: 100px;
     }
 }
 
@@ -415,6 +435,12 @@ a {
     }
     .Nav-Link {
         font-size: 50px;
+    }
+    .Nav-Projects-Link {
+        font-size: 50px;
+    }
+    .Nav-Projects-Link-Description {
+        font-size: 9px;
     }
 }
 
