--- a/src/styles/projects/Project-Frame.scss
+++ b/src/styles/projects/Project-Frame.scss
@@ -59,10 +59,6 @@
         width: 100%;
         height: 100%;
         position: absolute;
-        background: url('../../assets/images/specialized/SpecializedProjectBG.jpg');
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
         opacity: .6;
     }
 
@@ -251,28 +247,19 @@
     width: 100%;
     height: 160vh;
 }
+    .Mock1-BG {
+        width: 100%;
+        height: 100%;
+    }
+
 .ProjectDisplay-Mock2 {
     width: 100%;
     height: 100vh;
     background-color: #000;
 }
-
-    .Mock1-BG {
-        width: 100%;
-        height: 100%;
-        background: url('../../assets/images/specialized/Moch1.jpg');
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-    }
-
     .Mock2-BG {
         width: 100%;
         height: 100%;
-        background: url('../../assets/images/specialized/IphoneMockUp-Specialized.jpg');
-        background-position: center;
-        background-size: contain;
-        background-repeat: no-repeat;
     }
 
 @media screen and (max-width: 1100px){
@@ -374,7 +361,7 @@
             font-size: 32px;
             font-weight: 700;
             text-transform: uppercase;
-            white-space: nowrap;
+            white-space: normal;
             margin-bottom: 40px;
         }
 
