First two pages of projects are done, still need to finsh three more and the contact page, deploying what i have curretly to bluehost

--- a/src/styles/projects/Project-Frame.scss
+++ b/src/styles/projects/Project-Frame.scss
@@ -1,5 +1,8 @@
 //Project Pages Frame --- --- --- --- ---
 
+
+
+
 //Intro Scene ---------
 
 .Projects-Intro-Wrap {
@@ -212,6 +215,8 @@
             white-space: nowrap;
             margin-bottom: 40px;
         }
+
+
 
         .ProjectSPWA-Text {
             padding-left: 300px;
@@ -428,4 +433,13 @@
     .ProjectPage-ClosingText {
         font-size: 12px;
     }
+}
+
+
+
+
+
+
+.WhiteSpaceWrap {
+    white-space: normal;
 }
