--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -13,9 +13,12 @@ html, body {
     position: relative;
     display: flex;
     justify-content: center;
-    // overflow: hidden;
+    overflow: hidden;
 }
 
+    .OverFlow {
+        overflow-y: scroll;
+    }
     .BgLight {
         background-color: rgb(240, 240, 240);
     }
@@ -42,8 +45,7 @@ a {
     height: 100%;
     position: relative;
     background-color: transparent;
-    overflow-x: hidden;
-    // opacity: 0;
+    opacity: 0;
 }
 
 .ScrollBar {
@@ -144,7 +146,7 @@ a {
 
 
 
-
+//NAV ----------------------------
 .Nav {
     width: 100%;
     height: 100vh;
